<resources>
    <string name="app_name">Drugstore</string>
    <string name="save">Save</string>
    <string name="title_activity_drugs">Drugs</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drugs">Drugs</string>
    <string name="my_drugs">My Drugs</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="prescriptions">Prescriptions</string>

    <string name="drug_name">Drug name</string>
    <string name="drug_api">Active ingredient</string>
    <string name="package_description">Package description</string>
    <string name="package_default_doses">Default doses</string>
    <string name="package_units">Units</string>
    <string name="expiration_date">Expiration date</string>
    <string name="dose">Dose</string>
    <string name="doses">Doses</string>
    <string name="doses_left">Doses left</string>

    <string name="wait">Wait</string>
    <string name="loading_pharmacies">Loading pharmacies ...</string>

    <string name="use">Use</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete_question">Are you sure?</string>
    <string name="exp">EXP</string>

    <string name="please_wait">OCR</string>
    <string name="processing_image">Processing Image ...</string>

    <string name="title_activity_drug_detail">DrugDetailActivity</string>
    <string name="title_activity_new_drug">NewDrugActivity</string>
    <string name="button_ok">Ok</string>

    <string name="empty_drugs">No drugs</string>
    <string name="empty_pack">No packages</string>
    <string name="empty_prescriptions">No prescriptions</string>


    <string name="export_db">Backup</string>
    <string name="import_db">Restore</string>

    <string name="settings">Settings</string>
    <string name="pref_group_image_tools">Image tools</string>
    <string name="pref_OCR">OCR</string>
    <string name="pref_OCR_summary">Enable Optical Character Recognition from drug image</string>
    <string name="pref_group_notification">Notification</string>
    <string name="pref_days_notify">Default check day</string>
    <string name="pref_days_notify_summary">Choose day of week to check expiring drugs</string>
    <string name="pref_hour_of_day_notify">Default notification time</string>
    <string name="pref_hour_of_day_notify_summary">Choose preferred time of notifications</string>
    <string name="pref_debug">Debug</string>
    <string name="pref_debug_summary">Notify every 120 sec</string>


    <string name="google_api_key">AIzaSyA1YtIDJpygHHGN9MD43opEM0Xx_e7mhhA</string>
    <string name="title_activity_settings">Settings</string>


    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="select_exp_date">Select expiration date</string>
    <string name="is_expiring">is expiring</string>

    <string name="every">Every</string>
    <string name="until">Until</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="week">Week</string>
    <string name="weeks">Weeks</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>

    <string name="is_running_out">is ​running out</string>

    <string name="alert_empty_fields">Please fill in all fields</string>
    <string name="alert_date_not_correct">Date format not correct</string>
    <string name="alert_dose_not_number">Dose must be an integer number</string>
    <string name="alert_file_error">File not valid</string>


</resources>
