<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drugs"
            android:icon="@drawable/medical15"
            android:title="@string/drugs" />
        <!--
        <item
            android:id="@+id/nav_prescriptions"
            android:icon="@drawable/document296"
            android:title="@string/prescriptions" />
            -->
        <item
            android:id="@+id/nav_pharmacies"
            android:icon="@drawable/cross5"
            android:title="@string/pharmacies" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        <item
            android:id="@+id/nav_export_db"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/export_db" />
        <item
            android:id="@+id/nav_import_db"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/import_db" />
    </group>

</menu>
